Added sampling at the end

--- a/train2.ipynb
+++ b/train2.ipynb
@@ -223,7 +223,6 @@
    "source": [
     "recording = np.load('preprocessed_data/recording318.npy', allow_pickle=True)\n",
     "instruments_np = np.load('preprocessed_data/instruments318.npy', allow_pickle=True)\n",
-    "times_np = np.load('preprocessed_data/times318.npy', allow_pickle=True)\n",
     "\n",
     "inst = 1\n",
     "\n",
@@ -232,7 +231,6 @@
     "history = torch.tensor(recording[inst][:max_seq_length], dtype=torch.long).view(-1, 1, 1)\n",
     "mask = torch.zeros(history.shape, dtype=torch.bool)\n",
     "instruments = torch.tensor(instrument_numbers.index(instruments_np[inst]), dtype=torch.long).view(1, 1, 1)\n",
-    "times = torch.tensor(times_np[inst][:max_seq_length]).view(-1, 1, 1)\n",
     "\n",
     "max_instruments = history.shape[1]\n",
     "\n",
@@ -320,7 +318,6 @@
     "gen_history = torch.tensor(recording[inst][0], dtype=torch.long).view(-1, 1, 1)\n",
     "mask = torch.zeros((1, 1, 1), dtype=torch.bool)\n",
     "instruments = torch.tensor(instrument_numbers.index(instruments_np[inst]), dtype=torch.long).view(1, 1, 1)\n",
-    "times = torch.tensor([0]).view(-1, 1, 1)\n",
     "model.eval() # Turns off the dropout for evaluation. Need to do this to get repeatable evaluation outputs\n",
     "\n",
     "seq_length = 100\n",
@@ -335,7 +332,6 @@
     "    logits = model(gen_history, mask, instruments, gen_idx)\n",
     "    probs = torch.nn.functional.softmax(logits[t - 1], dim=1)\n",
     "    gen_history = torch.cat((gen_history, torch.multinomial(probs, 1).view(1, 1, -1)))\n",
-    "    #probs = torch.nn.functional.softmax(model(history[:t], mask, instruments, gen_idx), dim=1)\n",
     "    #gen_history = torch.cat((gen_history, torch.argmax(probs.flatten()).view(1, 1, 1)))\n",
     "    if torch.argmax(probs.flatten()) != history[t].flatten():\n",
     "        wrong_cnt += 1\n",
@@ -401,7 +397,6 @@
    "source": [
     "recording = np.load('preprocessed_data/recording318.npy', allow_pickle=True)\n",
     "instruments_np = np.load('preprocessed_data/instruments318.npy', allow_pickle=True)\n",
-    "times_np = np.load('preprocessed_data/times318.npy', allow_pickle=True)\n",
     "\n",
     "max_seq_length = 100\n",
     "max_instruments = instruments_np.shape[0]\n",
@@ -410,12 +405,10 @@
     "history = torch.zeros((max_seq_length, max_instruments, batch_size), dtype=torch.long)\n",
     "mask = torch.ones(history.shape, dtype=torch.bool)\n",
     "instruments = torch.tensor([instrument_numbers.index(instruments_np[i]) for i in range(max_instruments)], dtype=torch.long).view(1, -1, 1)\n",
-    "times = torch.zeros(history.shape)\n",
     "\n",
     "for inst in range(max_instruments):\n",
     "    history[:max_seq_length, inst, 0] = torch.tensor(recording[inst][:max_seq_length], dtype=torch.long)\n",
     "    mask[:max_seq_length, inst, 0] = False\n",
-    "    times[:max_seq_length, inst, 0] = torch.tensor(times_np[inst][:max_seq_length])\n",
     "\n",
     "learning_rate = 0.001\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
@@ -502,8 +495,6 @@
    ],
    "source": [
     "# Check if each instrument can reconstruct its part, given the other instrument's part\n",
-    "min_time_shift = 0.01\n",
-    "time_start = 2*num_notes + num_velocities # Any message greater than this is a time shift message\n",
     "model.eval() # Turns off the dropout for evaluation. Need to do this to get repeatable evaluation outputs\n",
     "\n",
     "for inst in range(max_instruments):\n",
@@ -584,20 +575,15 @@
     "        files = os.listdir(root_dir)\n",
     "        self.recordings = []\n",
     "        self.instrument_files = []\n",
-    "        self.time_files = []\n",
     "        for file in files:\n",
     "            if 'recording' in file:\n",
     "                self.recordings.append(os.path.join(root_dir, file))\n",
     "            elif 'instruments' in file:\n",
     "                self.instrument_files.append(os.path.join(root_dir, file))\n",
-    "            elif 'times' in file:\n",
-    "                self.time_files.append(os.path.join(root_dir, file))\n",
     "                \n",
     "        assert(len(self.recordings) == len(self.instrument_files))\n",
-    "        assert(len(self.recordings) == len(self.time_files))\n",
     "        self.recordings.sort()\n",
     "        self.instrument_files.sort()\n",
-    "        self.time_files.sort()\n",
     "        self.transform = transform\n",
     "\n",
     "    # __len__\n",
@@ -614,14 +600,9 @@
     "    # instance['times'] is a numpy array of message time sequences for each instrument\n",
     "    def __getitem__(self, idx):\n",
     "        instance = {'history': np.load(self.recordings[idx], allow_pickle=True), \\\n",
-    "                    'instruments': np.load(self.instrument_files[idx], allow_pickle=True), \\\n",
-    "                    'times': np.load(self.time_files[idx], allow_pickle=True)}\n",
+    "                    'instruments': np.load(self.instrument_files[idx], allow_pickle=True)}\n",
     "        \n",
-    "        assert(len(instance['history']) == len(instance['times']))\n",
     "        assert(len(instance['history']) == len(instance['instruments']))\n",
-    "        \n",
-    "        for i in range(len(instance['history'])):\n",
-    "            assert(len(instance['history'][i]) == len(instance['times'][i]))\n",
     "        \n",
     "        if self.transform:\n",
     "            instance = self.transform(instance)\n",
@@ -635,7 +616,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# collate_fn: takes a list of samples from the dataset and turns them into a batch\n",
+    "# collate_fn: takes a list of samples from the dataset and turns them into a batch.\n",
     "# ARGUMENTS\n",
     "# batch: a list of dictionaries\n",
     "# RETURN: a sample with keys 'history', 'instruments', 'times', and 'mask'\n",
@@ -654,7 +635,6 @@
     "\n",
     "    sample = {'history': torch.ones((longest_len, max_instruments, batch_size), dtype=torch.long), \\\n",
     "              'instruments': torch.zeros((1, max_instruments, batch_size), dtype=torch.long), \\\n",
-    "              'times': torch.zeros((longest_len, max_instruments, batch_size)), \\\n",
     "              'mask': torch.ones((longest_len, max_instruments, batch_size), dtype=torch.bool)}\n",
     "\n",
     "    for b in range(batch_size):\n",
@@ -748,11 +728,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.eval() # Disable dropout to make results repeatable"
+    "model.eval() # Disable dropout to make results repeatable\n",
+    "\n",
+    "time_steps = 5000 # How many time steps do we sample?\n",
+    "\n",
+    "max_instruments = 3\n",
+    "\n",
+    "# Piano, violin, viola\n",
+    "instruments = torch.tensor([0, 2, 3]).view(1, max_instruments, 1)\n",
+    "\n",
+    "# Suppose they all start with the same velocity message\n",
+    "# TODO: should we have SOS and EOS tokens like in NLP?\n",
+    "gen_history = 24*torch.ones((1, max_instruments, 1), dtype=torch.long)\n",
+    "mask = torch.zeros((1, 1, 1), dtype=torch.bool)\n",
+    "\n",
+    "for t in range(1, time_steps):\n",
+    "    # Sanity check\n",
+    "    if t%100 == 0:\n",
+    "        print(t)\n",
+    "    next_messages = torch.zeros((1, max_instruments, 1), dtype=torch.long)\n",
+    "    for inst in range(max_instruments):\n",
+    "        logits = model(gen_history, mask.expand(t, max_instruments, -1), instruments, inst)\n",
+    "        probs = torch.nn.functional.softmax(logits[t - 1], dim=1)\n",
+    "        next_messages[0, inst, 0] = torch.multinomial(probs, 1)\n",
+    "    \n",
+    "    gen_history = torch.cat((gen_history, next_messages))"
    ]
   },
   {
