Took out extraneous times references

--- a/train2.ipynb
+++ b/train2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,10 +594,9 @@
     "    # __getitem__\n",
     "    # ARGUMENTS\n",
     "    # idx: indicates which file to get\n",
-    "    # RETURN: an instance with keys 'instruments', 'history', and 'times'\n",
+    "    # RETURN: an instance with keys 'instruments', 'history'\n",
     "    # instance['history'] is a numpy array of message sequences for each instrument\n",
     "    # instance['instruments'] a numpy array of instrument numbers\n",
-    "    # instance['times'] is a numpy array of message time sequences for each instrument\n",
     "    def __getitem__(self, idx):\n",
     "        instance = {'history': np.load(self.recordings[idx], allow_pickle=True), \\\n",
     "                    'instruments': np.load(self.instrument_files[idx], allow_pickle=True)}\n",
@@ -612,20 +611,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "# collate_fn: takes a list of samples from the dataset and turns them into a batch.\n",
     "# ARGUMENTS\n",
     "# batch: a list of dictionaries\n",
-    "# RETURN: a sample with keys 'history', 'instruments', 'times', and 'mask'\n",
+    "# RETURN: a sample with keys 'history', 'instruments', and 'mask'\n",
     "# sample['history']: an LxNxB tensor containing messages\n",
     "# sample['instruments']: a 1xNxB tensor containing instrument numbers\n",
     "# sample['mask']: an LxNxB tensor containing False where a message is\n",
     "# valid, and True where it isn't (accounts for variable length sequences\n",
     "# and zero padding)\n",
-    "# sample['times']: an LxNxB tensor containing times of each message\n",
     "def collate_fn(batch):\n",
     "    batch_size = len(batch)\n",
     "    \n",
@@ -645,7 +643,6 @@
     "            seq_length = len(batch[b]['history'][inst_idx])\n",
     "            sample['history'][:seq_length, inst_idx, b] = torch.tensor(batch[b]['history'][inst_idx], dtype=torch.long)\n",
     "            sample['mask'][:seq_length, inst_idx, b] = False\n",
-    "            sample['times'][:seq_length, inst_idx, b] = torch.tensor(batch[b]['times'][inst_idx])\n",
     "            \n",
     "    return sample"
    ]
@@ -659,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
