--- a/train2.ipynb
+++ b/train2.ipynb
@@ -145,28 +145,24 @@
     "        \n",
     "        inputs = self.position_encoding(inputs)\n",
     "        \n",
-    "        encoder_mask = None\n",
+    "        memory_key_padding_mask = None\n",
     "        memory_mask = None\n",
     "        tgt_mask = torch.triu(torch.ones((L, L), dtype=torch.bool))\n",
     "        tgt_mask.fill_diagonal_(False)\n",
     "        \n",
     "        # If only one instrument, only run the decoder\n",
     "        if N == 1:\n",
-    "            encoding = torch.zeros((1, B, self.embed_dim))\n",
+    "            memory = torch.zeros((1, B, self.embed_dim))\n",
     "        else:\n",
-    "            encode_idx = [i for i in range(N) if i != gen_idx]\n",
-    "            encoder_inputs = inputs[:, encode_idx].view(-1, B, self.embed_dim)\n",
-    "            encoder_mask = mask[:, encode_idx].view(-1, B).transpose(0, 1)\n",
-    "            #encoding = self.encoder(encoder_inputs, src_key_padding_mask=encoder_mask) # TODO: why doesn't this work?\n",
-    "            encoding = encoder_inputs\n",
-    "            \n",
+    "            memory_idx = [i for i in range(N) if i != gen_idx]\n",
+    "            memory = inputs[:, encode_idx].view(-1, B, self.embed_dim)\n",
+    "            memory_key_padding_mask = mask[:, encode_idx].view(-1, B).transpose(0, 1)\n",
     "            memory_mask = tgt_mask.repeat(1, N - 1)\n",
     "        \n",
     "        decoder_inputs = inputs[:, gen_idx]\n",
-    "        decoder_mask = mask[:, gen_idx].transpose(0, 1)\n",
-    "\n",
+    "        tgt_key_padding_mask = mask[:, gen_idx].transpose(0, 1)\n",
     "        decoding = self.decoder(decoder_inputs, encoding, tgt_mask=tgt_mask, memory_mask=memory_mask, \\\n",
-    "                                tgt_key_padding_mask=decoder_mask, memory_key_padding_mask=encoder_mask)\n",
+    "                                tgt_key_padding_mask=tgt_key_padding_mask, memory_key_padding_mask=memory_key_padding_mask)\n",
     "        \n",
     "        return self.logits(decoding)"
    ]
