Slight fix with train_gru sampling

--- a/train_gru.ipynb
+++ b/train_gru.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,8 +177,8 @@
     "            new_hidden_states[inst, :, sel_idx] = hid\n",
     "\n",
     "            probs = torch.nn.functional.softmax(self.logits(new_hidden_states[inst, -1, sel_idx]), dim=1)\n",
-    "            #new_messages[inst, sel_idx] = torch.multinomial(probs, 1)\n",
-    "            new_messages[inst, sel_idx] = torch.argmax(probs, 1)\n",
+    "            new_messages[inst, sel_idx] = torch.multinomial(probs, 1)\n",
+    "            #new_messages[inst, sel_idx] = torch.argmax(probs, 1)\n",
     "            \n",
     "        return new_messages, new_hidden_states"
    ]
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -579,13 +579,13 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.load_state_dict(torch.load('trained_models/epoch4.pth'))"
+    "model.load_state_dict(torch.load('trained_models/gru_model.pth'))"
    ]
   },
   {
@@ -620,7 +620,7 @@
     "        \n",
     "    gen_message, hidden_states = model.forward_generate(gen_history[t - 1], instruments.squeeze(0), mask, num_inst, hidden_states)\n",
     "    \n",
-    "    gen_history = torch.cat((gen_history, gen_message))"
+    "    gen_history = torch.cat((gen_history, gen_message.unsqueeze(0)))"
    ]
   },
   {
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,6 +643,15 @@
     "gen_instruments = np.array([instrument_numbers[instruments[0, i, 0].item()] for i in range(max_instruments)])\n",
     "np.save('gen_recording.npy', gen_recording)\n",
     "np.save('gen_instruments.npy', gen_instruments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), 'trained_models/gru_model.pth')"
    ]
   },
   {
