Saving generated sample

--- a/train2.ipynb
+++ b/train2.ipynb
@@ -704,296 +704,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting epoch 0\n",
-      "Starting iteration 0\n",
-      "Starting iteration 1\n",
-      "Starting iteration 2\n",
-      "Starting iteration 3\n",
-      "Starting iteration 4\n",
-      "Starting iteration 5\n",
-      "Starting iteration 6\n",
-      "Starting iteration 7\n",
-      "Starting iteration 8\n",
-      "Starting iteration 9\n",
-      "Starting iteration 10\n",
-      "Starting iteration 11\n",
-      "Starting iteration 12\n",
-      "Starting iteration 13\n",
-      "Starting iteration 14\n",
-      "Starting iteration 15\n",
-      "Starting iteration 16\n",
-      "Starting iteration 17\n",
-      "Starting iteration 18\n",
-      "Starting iteration 19\n",
-      "Starting iteration 20\n",
-      "Starting iteration 21\n",
-      "Starting iteration 22\n",
-      "Starting iteration 23\n",
-      "Starting iteration 24\n",
-      "Starting iteration 25\n",
-      "Starting iteration 26\n",
-      "Starting iteration 27\n",
-      "Starting iteration 28\n",
-      "Starting iteration 29\n",
-      "Starting iteration 30\n",
-      "Starting iteration 31\n",
-      "Starting iteration 32\n",
-      "Starting iteration 33\n",
-      "Starting iteration 34\n",
-      "Starting iteration 35\n",
-      "Starting iteration 36\n",
-      "Starting iteration 37\n",
-      "Starting iteration 38\n",
-      "Starting iteration 39\n",
-      "Starting iteration 40\n",
-      "Starting iteration 41\n",
-      "Starting iteration 42\n",
-      "Starting iteration 43\n",
-      "Starting iteration 44\n",
-      "Starting iteration 45\n",
-      "Starting iteration 46\n",
-      "Starting iteration 47\n",
-      "Starting iteration 48\n",
-      "Starting iteration 49\n",
-      "Starting iteration 50\n",
-      "Starting iteration 51\n",
-      "Starting iteration 52\n",
-      "Starting iteration 53\n",
-      "Starting iteration 54\n",
-      "Starting iteration 55\n",
-      "Starting iteration 56\n",
-      "Starting iteration 57\n",
-      "Starting iteration 58\n",
-      "Starting iteration 59\n",
-      "Starting iteration 60\n",
-      "Starting iteration 61\n",
-      "Starting iteration 62\n",
-      "Starting iteration 63\n",
-      "Starting iteration 64\n",
-      "Starting iteration 65\n",
-      "Starting iteration 66\n",
-      "Starting iteration 67\n",
-      "Starting iteration 68\n",
-      "Starting iteration 69\n",
-      "Starting iteration 70\n",
-      "Starting iteration 71\n",
-      "Starting iteration 72\n",
-      "Starting iteration 73\n",
-      "Starting iteration 74\n",
-      "Starting iteration 75\n",
-      "Starting iteration 76\n",
-      "Starting iteration 77\n",
-      "Starting iteration 78\n",
-      "Starting iteration 79\n",
-      "Starting iteration 80\n",
-      "Starting iteration 81\n",
-      "Starting iteration 82\n",
-      "Starting iteration 83\n",
-      "Starting iteration 84\n",
-      "Starting iteration 85\n",
-      "Starting iteration 86\n",
-      "Starting iteration 87\n",
-      "Starting iteration 88\n",
-      "Starting iteration 89\n",
-      "Starting iteration 90\n",
-      "Starting iteration 91\n",
-      "Starting iteration 92\n",
-      "Starting iteration 93\n",
-      "Starting iteration 94\n",
-      "Starting iteration 95\n",
-      "Starting iteration 96\n",
-      "Starting iteration 97\n",
-      "Starting iteration 98\n",
-      "Starting iteration 99\n",
-      "Starting iteration 100\n",
-      "Starting iteration 101\n",
-      "Starting iteration 102\n",
-      "Starting iteration 103\n",
-      "Starting iteration 104\n",
-      "Starting iteration 105\n",
-      "Starting iteration 106\n",
-      "Starting iteration 107\n",
-      "Starting iteration 108\n",
-      "Starting iteration 109\n",
-      "Starting iteration 110\n",
-      "Starting iteration 111\n",
-      "Starting iteration 112\n",
-      "Starting iteration 113\n",
-      "Starting iteration 114\n",
-      "Starting iteration 115\n",
-      "Starting iteration 116\n",
-      "Starting iteration 117\n",
-      "Starting iteration 118\n",
-      "Starting iteration 119\n",
-      "Starting iteration 120\n",
-      "Starting iteration 121\n",
-      "Starting iteration 122\n",
-      "Starting iteration 123\n",
-      "Starting iteration 124\n",
-      "Starting iteration 125\n",
-      "Starting iteration 126\n",
-      "Starting iteration 127\n",
-      "Starting iteration 128\n",
-      "Starting iteration 129\n",
-      "Starting iteration 130\n",
-      "Starting iteration 131\n",
-      "Starting iteration 132\n",
-      "Starting iteration 133\n",
-      "Starting iteration 134\n",
-      "Starting iteration 135\n",
-      "Starting iteration 136\n",
-      "Starting iteration 137\n",
-      "Starting iteration 138\n",
-      "Starting iteration 139\n",
-      "Starting iteration 140\n",
-      "Starting iteration 141\n",
-      "Starting iteration 142\n",
-      "Starting iteration 143\n",
-      "Starting iteration 144\n",
-      "Starting iteration 145\n",
-      "Starting iteration 146\n",
-      "Starting iteration 147\n",
-      "Starting iteration 148\n",
-      "Starting iteration 149\n",
-      "Starting iteration 150\n",
-      "Starting iteration 151\n",
-      "Starting iteration 152\n",
-      "Starting iteration 153\n",
-      "Starting iteration 154\n",
-      "Starting iteration 155\n",
-      "Starting iteration 156\n",
-      "Starting iteration 157\n",
-      "Starting iteration 158\n",
-      "Starting iteration 159\n",
-      "Starting iteration 160\n",
-      "Starting iteration 161\n",
-      "Starting iteration 162\n",
-      "Starting iteration 163\n",
-      "Starting iteration 164\n",
-      "Starting iteration 165\n",
-      "Starting iteration 166\n",
-      "Starting iteration 167\n",
-      "Starting iteration 168\n",
-      "Starting iteration 169\n",
-      "Starting iteration 170\n",
-      "Starting iteration 171\n",
-      "Starting iteration 172\n",
-      "Starting iteration 173\n",
-      "Starting iteration 174\n",
-      "Starting iteration 175\n",
-      "Starting iteration 176\n",
-      "Starting iteration 177\n",
-      "Starting iteration 178\n",
-      "Starting iteration 179\n",
-      "Starting iteration 180\n",
-      "Starting iteration 181\n",
-      "Starting iteration 182\n",
-      "Starting iteration 183\n",
-      "Starting iteration 184\n",
-      "Starting iteration 185\n",
-      "Starting iteration 186\n",
-      "Starting iteration 187\n",
-      "Starting iteration 188\n",
-      "Starting iteration 189\n",
-      "Starting iteration 190\n",
-      "Starting iteration 191\n",
-      "Starting iteration 192\n",
-      "Starting iteration 193\n",
-      "Starting iteration 194\n",
-      "Starting iteration 195\n",
-      "Starting iteration 196\n",
-      "Starting iteration 197\n",
-      "Starting iteration 198\n",
-      "Starting iteration 199\n",
-      "Starting iteration 200\n",
-      "Starting iteration 201\n",
-      "Starting iteration 202\n",
-      "Starting iteration 203\n",
-      "Starting iteration 204\n",
-      "Starting iteration 205\n",
-      "Starting iteration 206\n",
-      "Starting iteration 207\n",
-      "Starting iteration 208\n",
-      "Starting iteration 209\n",
-      "Starting iteration 210\n",
-      "Starting iteration 211\n",
-      "Starting iteration 212\n",
-      "Starting iteration 213\n",
-      "Starting iteration 214\n",
-      "Starting iteration 215\n",
-      "Starting iteration 216\n",
-      "Starting iteration 217\n",
-      "Starting iteration 218\n",
-      "Starting iteration 219\n",
-      "Starting iteration 220\n",
-      "Starting iteration 221\n",
-      "Starting iteration 222\n",
-      "Starting iteration 223\n",
-      "Starting iteration 224\n",
-      "Starting iteration 225\n",
-      "Starting iteration 226\n",
-      "Starting iteration 227\n",
-      "Starting iteration 228\n",
-      "Starting iteration 229\n",
-      "Starting iteration 230\n",
-      "Starting iteration 231\n",
-      "Starting iteration 232\n",
-      "Starting iteration 233\n",
-      "Starting iteration 234\n",
-      "Starting iteration 235\n",
-      "Starting iteration 236\n",
-      "Starting iteration 237\n",
-      "Starting iteration 238\n",
-      "Starting iteration 239\n",
-      "Starting iteration 240\n",
-      "Starting iteration 241\n",
-      "Starting iteration 242\n",
-      "Starting iteration 243\n",
-      "Starting iteration 244\n",
-      "Starting iteration 245\n",
-      "Starting iteration 246\n",
-      "Starting iteration 247\n",
-      "Starting iteration 248\n",
-      "Starting iteration 249\n",
-      "Starting iteration 250\n",
-      "Starting iteration 251\n",
-      "Starting iteration 252\n",
-      "Starting iteration 253\n",
-      "Starting iteration 254\n",
-      "Starting iteration 255\n",
-      "Starting iteration 256\n",
-      "Starting iteration 257\n",
-      "Starting iteration 258\n",
-      "Starting iteration 259\n",
-      "Starting iteration 260\n",
-      "Starting iteration 261\n",
-      "Starting iteration 262\n",
-      "Starting iteration 263\n",
-      "Starting iteration 264\n",
-      "Starting iteration 265\n",
-      "Starting iteration 266\n",
-      "Starting iteration 267\n",
-      "Starting iteration 268\n",
-      "Starting iteration 269\n",
-      "Starting iteration 270\n",
-      "Starting iteration 271\n",
-      "Starting iteration 272\n",
-      "Starting iteration 273\n",
-      "Starting iteration 274\n",
-      "Starting iteration 275\n",
-      "Starting iteration 276\n",
-      "Starting iteration 277\n",
-      "Starting iteration 278\n",
-      "Starting iteration 279\n",
-      "Starting iteration 280\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch_size = 1\n",
     "learning_rate = 0.001\n",
@@ -1042,6 +753,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.load_state_dict(torch.load('trained_models/epoch4.pth'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1071,6 +802,28 @@
     "        next_messages[0, inst, 0] = torch.multinomial(probs, 1)\n",
     "    \n",
     "    gen_history = torch.cat((gen_history, next_messages))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_recording = np.array([0 for i in range(max_instruments)], dtype='object')\n",
+    "for i in range(max_instruments):\n",
+    "    gen_recording[i] = gen_history[:, i].flatten().numpy()\n",
+    "    \n",
+    "gen_instruments = np.array([instrument_numbers[instruments[0, i, 0].item()] for i in range(max_instruments)])\n",
+    "np.save('gen_recording.npy', gen_recording)\n",
+    "np.save('gen_instruments.npy', gen_instruments)"
    ]
   },
   {
