Added forward generate to mem_transformer. Replaced GATConv with multi head attention

--- a/trainxl.ipynb
+++ b/trainxl.ipynb
@@ -27,8 +27,7 @@
     "import math\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "from mem_transformer import MemTransformerLM\n",
-    "from dgl.nn.pytorch import GATConv"
+    "from mem_transformer import MemTransformerLM"
    ]
   },
   {
@@ -102,7 +101,7 @@
     "        # Between chunks, we compute attentions across the current hidden states from all the instruments,\n",
     "        # producing new hidden states for each\n",
     "        # https://docs.dgl.ai/en/0.4.x/_modules/dgl/nn/pytorch/conv/gatconv.html\n",
-    "        self.inst_attention = GATConv(embed_dim, embed_dim, heads)\n",
+    "        self.inst_attention = torch.nn.MultiheadAttention(embed_dim, heads)\n",
     "    \n",
     "    # forward: generates the next MIDI message\n",
     "    # for each instrument in an ensemble, given the ensemble history\n",
@@ -115,7 +114,7 @@
     "    # seq_lengths: an NxB tensor containing the sequence length for each instrument in each batch\n",
     "    # mask: an LxNxB tensor containing True where messages actually exist and False in padding\n",
     "    # locations\n",
-    "    # RETURN: loss, as well as an NxB tensor containing the predicted next message for each sequence\n",
+    "    # RETURN: loss\n",
     "    def forward(self, history, instruments, seq_lengths, mask):\n",
     "        L = history.shape[0] # longest length\n",
     "        N = history.shape[1] # max instruments\n",
@@ -124,7 +123,7 @@
     "        assert(seq_lengths.shape == instruments.shape)\n",
     "        assert(mask.shape == history.shape)\n",
     "        \n",
-    "        mems = [[None for b in range(B)] for i in range(N)]\n",
+    "        mems = [None for i in range(N)]\n",
     "        next_messages = torch.zeros((N, B), dtype=torch.long)\n",
     "        \n",
     "        # Target sequence is just the original sequence shifted left\n",
@@ -140,25 +139,34 @@
     "            chunk_end = min(i + self.chunk_size, L)\n",
     "            \n",
     "            for inst in range(N):\n",
-    "                # Only propagate sequences that aren't finished\n",
-    "                sel_idx = [b for b in range(B) if seq_lengths[inst, b] > chunk_start]\n",
-    "                output = self.transformer(history[chunk_start:chunk_end, inst, sel_idx], \\\n",
-    "                                          tgt[chunk_start:chunk_end, inst, sel_idx], \\\n",
-    "                                          mems[inst]\n",
-    "                                          inst)\n",
+    "                # TODO: only propagate sequences that aren't finished\n",
+    "                # sel_idx = [b for b in range(B) if seq_lengths[inst, b] > chunk_start]\n",
+    "                #output = self.transformer(history[chunk_start:chunk_end, inst, sel_idx], \\\n",
+    "                #                          tgt[chunk_start:chunk_end, inst, sel_idx], \\\n",
+    "                #                          inst, mems[inst])\n",
+    "                #\n",
+    "                #loss_mask = tgt_mask[chunk_start:chunk_end, inst, sel_idx]\n",
     "                \n",
-    "                loss_mask = tgt_mask[chunk_start:chunk_end, inst, sel_idx]\n",
+    "                output = self.transformer(history[chunk_start:chunk_end, inst], \\\n",
+    "                                          tgt[chunk_start:chunk_end, inst], \\\n",
+    "                                          inst, mems[inst])\n",
+    "                \n",
+    "                # TODO: they use some adaptive log softmax loss. We should probably know what this is\n",
+    "                loss_mask = tgt_mask[chunk_start:chunk_end, inst]\n",
     "                loss = loss + output[0][loss_mask]\n",
     "                \n",
-    "                mems[inst][sel_idx] = output[1:]\n",
-    "                \n",
+    "                # TODO: write a separate forward_generate function that does this (using the forward_generate function of mem_transformer)\n",
     "                # If we've reached the last chunk for an instrument, populate its\n",
     "                # predicted next message\n",
+    "                '''\n",
     "                done_idx = [b for b in range(B) if (seq_lengths[inst, b] > chunk_start and seq_lengths[inst, b] <= chunk_end)]\n",
     "                for d in done_idx:\n",
-    "                    next_messages[inst, d] = #TODO: get logits from transformer\n",
+    "                    next_messages[inst, d] = self.transformer.forward_generate\n",
+    "                '''\n",
     "                    \n",
-    "            # Update memory for each sequence using self.inst_attention\n",
+    "            # Update memories using attention over instruments\n",
+    "            for b in range(B):\n",
+    "                \n",
     "                \n",
     "        # Average loss over all targets\n",
     "        loss /= torch.sum(tgt_mask)\n",
