Updated sync data representation

--- a/data_to_midi_sync.ipynb
+++ b/data_to_midi_sync.ipynb
@@ -16,17 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.load('test_history.npy', allow_pickle=True)\n",
-    "inst = np.load('test_instruments.npy', allow_pickle=True)"
+    "data = np.load('preprocessed_data_sync/recording0.npy', allow_pickle=True)\n",
+    "inst = np.load('preprocessed_data_sync/instruments0.npy', allow_pickle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,42 +37,37 @@
     "    notes_on = dict()\n",
     "    \n",
     "    for tstep in range(seq.shape[0]):\n",
-    "        # Check if any notes are being turned on or off\n",
-    "        actions = np.flip(np.sort(np.argwhere(seq[tstep, :2*num_notes])))\n",
-    "        for action in actions:\n",
-    "            if num_notes <= action < 2*num_notes:\n",
-    "                # Handle note-off events\n",
-    "                pitch = int(action - num_notes)\n",
-    "                if pitch in notes_on:\n",
-    "                    velocity = notes_on[pitch][0]\n",
-    "                    start_time = notes_on[pitch][1]\n",
-    "                    end_time = tstep/steps_per_sec\n",
-    "                    note=pretty_midi.Note(velocity=velocity, pitch=pitch, start=start_time, end=end_time)\n",
-    "                    instrument.notes.append(note)\n",
-    "                    del notes_on[pitch]\n",
-    "            else:\n",
-    "                # Handle note-on events\n",
-    "                pitch = int(action)\n",
-    "                velocity = int(round(seq[tstep, 2*num_notes + pitch]*127))\n",
-    "                start_time = tstep/steps_per_sec\n",
-    "                notes_on[pitch] = (velocity, start_time)\n",
+    "        # Check if any notes are finished\n",
+    "        del_keys = set()\n",
+    "        for pitch in notes_on:\n",
+    "            if seq[tstep, num_notes + pitch] == 0:\n",
+    "                velocity = notes_on[pitch][0]\n",
+    "                start_time = notes_on[pitch][1]\n",
+    "                end_time = tstep/steps_per_sec\n",
+    "                note=pretty_midi.Note(velocity=velocity, pitch=pitch, start=start_time, end=end_time)\n",
+    "                instrument.notes.append(note)\n",
+    "                del_keys.add(pitch)\n",
+    "                \n",
+    "        for pitch in del_keys:\n",
+    "            del notes_on[pitch]\n",
+    "                    \n",
+    "        notes_being_played = np.argwhere(seq[tstep, :num_notes]).flatten()\n",
+    "        for pitch in notes_being_played:\n",
+    "            if pitch in notes_on:\n",
+    "                continue\n",
+    "                \n",
+    "            velocity = int(round(seq[tstep, 2*num_notes + pitch]*127))\n",
+    "            start_time = tstep/steps_per_sec\n",
+    "            notes_on[pitch] = (velocity, start_time)\n",
     "    return instrument\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[45]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "recording = pretty_midi.PrettyMIDI()\n",
     "for i,j in zip(data, inst):\n",
@@ -81,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +105,7 @@
        "'Faure/2167_gr_f45m2.mid'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
