--- a/preprocess_sync.ipynb
+++ b/preprocess_sync.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
     "# Number of time steps per second (this is what NES-MDB uses)\n",
     "steps_per_sec = 24\n",
     "\n",
-    "# At each time step, an instrument can turn on notes and turn off notes. For each note it's turning on, it picks the note's velocity\n",
+    "# At each time step, an instrument can play notes and hold notes. For each note it's playing, it picks the velocity\n",
     "action_dim = 3*num_notes\n",
     "    \n",
     "base_path = 'musicnet_midis/'\n",
@@ -64,9 +64,9 @@
     "                start = int(round(note.start*steps_per_sec))\n",
     "                end = int(round(note.end*steps_per_sec))\n",
     "                \n",
-    "                data[i, start, note.pitch] = 1 # Turn on the note\n",
-    "                data[i, end, num_notes + note.pitch] = 1 # Turn off the note\n",
-    "                data[i, start, 2*num_notes + note.pitch] = note.velocity/127               \n",
+    "                data[i, start:end, note.pitch] = 1 # Turn on the note\n",
+    "                data[i, start + 1:end, num_notes + note.pitch] = 1 # Hold the note until it turns off   \n",
+    "                data[i, start:end, 2*num_notes + note.pitch] = note.velocity/127               \n",
     "                \n",
     "        np.save('preprocessed_data_sync/recording' + str(fnum) + '.npy', data)\n",
     "        \n",
